
syntax = "proto3";

package soma.rpc;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "soma/rpc/executed_transaction.proto";
import "soma/rpc/signature.proto";
import "soma/rpc/transaction.proto";

service TransactionExecutionService {
  rpc ExecuteTransaction(ExecuteTransactionRequest) returns (ExecuteTransactionResponse);
  // TODO move simulate transaction here for GA release
  //rpc SimulateTransaction(SimulateTransactionRequest) returns (SimulateTransactionResponse);
}

message ExecuteTransactionRequest {
  // The transaction to execute.
  optional Transaction transaction = 1;

  // Set of `UserSiganture`s authorizing the execution of the provided
  // transaction.
  repeated UserSignature signatures = 2;

  // Mask specifying which fields to read.
  // If no mask is specified, defaults to `finality`.
  optional google.protobuf.FieldMask read_mask = 3;
}

// Response message for `NodeService.ExecuteTransaction`.
message ExecuteTransactionResponse {
  // Indicates the finality of the executed transaction.
  optional TransactionFinality finality = 1;

  optional ExecutedTransaction transaction = 2;
}

// Indicates the finality of the executed transaction.
message TransactionFinality {
  oneof finality {
    // A quorum certificate certifying that a transaction is final but might not
    // be included in a checkpoint yet.
    ValidatorAggregatedSignature certified = 1;
  }
}